# coppa

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN-channel-estimation.md  PLAN-hardening.md  README.md  SECURITY.md  coppad.toml.example  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
benches/: throughput.rs
crates/coppa-audio/: Cargo.toml
crates/coppa-audio/src/: cpal_backend.rs  file_backend.rs  lib.rs  loopback.rs  resampler.rs  ringbuf.rs  vox.rs
crates/coppa-bench/: Cargo.toml
crates/coppa-bench/examples/: adaptive_mcs_validation.rs  capacity_level_correction_calibration.rs  capacity_metric_level_bias.rs  cfo_level4_repro.rs  closed_loop_arq.rs  drift_cascade_gate.rs  drift_estimate_quality_diagnosis.rs  drift_tracker_gate.rs  estimator_diagnosis.rs  fading_diagnosis.rs  golden_vectors_gen.rs  header_diagnostic.rs  mcs_calibration.rs  mcs_compare.rs  milstd.rs  papr_clip_level_bias.rs  per_frame_link_diagnosis.rs  regression_root_cause.rs  session.rs  short_cp_fading_gate.rs  task1_gate.rs  task3_fec_isolated_gate.rs  task3_harq_ir_bench.rs  task3_short_payload_gate.rs  task4_alpha_calibration.rs  task4_bg2_ldpc_gate.rs  task5_gate.rs  task5_multi_codeword_transfer.rs  task5_rescue_rate.rs  task7_gate.rs  transfer_baseline.rs  watterson_header_precise.rs  watterson_sanity_sweep.rs
crates/coppa-bench/src/: lib.rs  main.rs  metrics.rs  report.rs  runner.rs  scenario.rs  transfer.rs
crates/coppa-channel/: Cargo.toml
crates/coppa-channel/src/: lib.rs  watterson.rs
crates/coppa-cli/: Cargo.toml
crates/coppa-cli/src/: main.rs
crates/coppa-cli/tests/: rx_golden.rs
crates/coppa-codec/: Cargo.toml
crates/coppa-codec/src/: afsk.rs  bpsk.rs  lib.rs  psk8.rs  qam16.rs  qam64.rs  qpsk.rs  traits.rs
crates/coppa-codec/src/ofdm/: coppa_modem.rs  cross_frame_interleaver.rs  delay_domain.rs  drift_tracker.rs  equalizer.rs  frame.rs  golay.rs  header_fec.rs  interleaver.rs  kalman_tracker.rs  mod.rs  modem.rs  pilots.rs  sync.rs  sync_detector.rs
crates/coppa-daemon/: Cargo.toml
crates/coppa-daemon/src/: config.rs  event_loop.rs  lib.rs  main.rs  spectrum.rs  tnc.rs
crates/coppa-dsp/: Cargo.toml
crates/coppa-dsp/src/: agc.rs  carrier_recovery.rs  fft.rs  filter.rs  fir.rs  lib.rs  timing_recovery.rs
crates/coppa-engine/: Cargo.toml
crates/coppa-engine/src/: config.rs  engine.rs  lib.rs  profiles.rs  rate_control.rs
crates/coppa-engine/tests/: engine_roundtrip.rs
crates/coppa-ffi/: Cargo.toml  build.rs  cbindgen.toml  coppa.h
crates/coppa-ffi/src/: lib.rs
crates/coppa-host/: Cargo.toml
crates/coppa-host/src/: kiss.rs  lib.rs  websocket.rs
crates/coppa-host/src/vara/: command.rs  data.rs  mod.rs  protocol.rs  server.rs
crates/coppa-ml/: Cargo.toml
crates/coppa-ml/python/: train_predictor.py
crates/coppa-ml/src/: busy_gate.rs  channel_predictor.rs  cp_gate.rs  lib.rs  mcs.rs  rate_loop.rs  registry.rs  spectrum_sensor.rs
crates/coppa-protocol/: Cargo.toml
crates/coppa-protocol/examples/: streaming_perf.rs  task4_decode_profile.rs  task4_nrldpc_construction_timing.rs
crates/coppa-protocol/src/: app.rs  arq.rs  ax25.rs  frame.rs  lib.rs  mac.rs  session.rs  transport.rs
crates/coppa-protocol/src/compression/: huffman.rs  lz4.rs  mod.rs
crates/coppa-protocol/src/fec/: convolutional.rs  interleaver.rs  mod.rs  scrambler.rs
crates/coppa-protocol/src/fec/ldpc/: codes.rs  decoder.rs  encoder.rs  mod.rs  nr_bg2.rs  rate_match.rs
crates/coppa-protocol/src/modem/: airtime.rs  mod.rs  speed_levels.rs  streaming.rs  transceiver.rs
crates/coppa-protocol/tests/: golden_vectors.rs
crates/coppa-radio/: Cargo.toml
crates/coppa-radio/src/: lib.rs  null_ptt.rs  ptt_gpio.rs  ptt_serial.rs  rigctld.rs  vox_ptt.rs
docs/: OPERATING.md  SPEC.md
docs/adr/: 001-workspace-layout.md  002-fec-strategy.md  003-phase1-waveform-break.md  004-strongest-path-timing.md  005-nr-bg2-ldpc.md  006-phase2-parametric-estimation-nr-bg2.md  007-multi-codeword-frames.md  008-phase3-system-layer.md
docs/analysis/: 2026-07-03-world-class-gap-analysis.md
docs/tutorials/: getting-started.md
examples/: bpsk_loopback.rs  ofdm_roundtrip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_callsign.rs  fuzz_frame_parse.rs  fuzz_viterbi.rs
models/: README.md
results/hotfix-2026-07/: awgn.csv
results/p1-final/: awgn.csv  good.csv  moderate.csv  poor.csv
results/p1-final-cfo40/: awgn.csv
results/p1-final-ssb/: awgn.csv
results/p1-hotfix/: awgn.csv  moderate.csv  poor.csv
results/p1-post-task2/: awgn.csv
results/p1-task3-check/: awgn.csv
results/p2-final/: awgn.csv  good.csv  moderate.csv  poor.csv
results/p2-final-cfo40/: awgn.csv
results/p2-final-ssb/: awgn.csv
results/rebaseline-2026-07/: awgn.csv  moderate.csv  poor.csv
src/: lib.rs
testdata/golden/: manifest.toml
tests/: afsk_loopback.rs  daemon_loopback.rs  integration_test.rs  ofdm_coppa_loopback.rs  phase_c_loopback.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  short_cp_profile.rs
tools/gen_nr_bg2/: Cargo.toml
tools/gen_nr_bg2/src/: main.rs
wiki/: INDEX.md  manifest.json  wiki.toml
wiki/pages/: adr-001-workspace-layout.md  adr-002-fec-strategy.md  adr-003-waveform-break.md  adr-004-strongest-path-timing.md  adr-005-nr-bg2-ldpc.md  adr-006-phase2-estimation.md  adr-007-multi-codeword-frames.md  adr-008-phase3-system-layer.md  band-conventions.md  coppa-dsp-skimmer-interface.md  coppa-dsp.md  coppa-engine.md  coppa-protocol.md  cpal-feature-gate.md  ldpc-non-convergence.md  overview.md  phase4-field-readiness.md  watterson-level-4-gap.md  waveform-wire-break.md
