[package]
name = "coppa-codec"
description = "Modulation and demodulation codecs for Coppa"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
coppa-dsp = { path = "../coppa-dsp" }
anyhow = { workspace = true }
crc = { workspace = true }
num-complex = { workspace = true }
rustfft = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
coppa-channel = { path = "../coppa-channel" }
rand = { workspace = true }
