[package]
name = "coppa-dsp"
description = "Pure DSP primitives for Coppa digital communications"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
num-complex = { workspace = true }
rustfft = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
