[package]
name = "coppa-ffi"
description = "C FFI bindings for Coppa"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
coppa-engine = { path = "../coppa-engine" }

[build-dependencies]
cbindgen = "0.29"
