[package]
name = "coppa-ml"
description = "Adaptive link control: capacity-based MCS selection, closed-loop rate control, spread-gated short-CP, spectrum sensing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rustfft = { workspace = true }
num-complex = { workspace = true }

[features]
default = []
