[package]
name = "gen_nr_bg2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "gen_nr_bg2"
path = "src/main.rs"

# Standalone by design: no dependency on coppa-protocol. This tool's only job is
# to transcribe the 3GPP TS 38.212 BG2 base graph (Zc=176 lifting-size family),
# validate the transcription, and codegen `nr_bg2.rs` for coppa-protocol to
# consume. See src/main.rs module docs for full provenance and validator
# rationale.
